# stm32-guide

./: .gitignore  .gitmodules  README.md  index.html
examples/adc/adc_read/: CMakeLists.txt  adc_read.c
examples/adc_read/: CMakeLists.txt  adc_read.c
examples/applications/pid_control/: CMakeLists.txt  CMakeLists.txt__  main.c
examples/applications/pid_control/bsp/: bsp.h  bsp_adc.c  bsp_adc.h  bsp_dma.c  bsp_dma.h  bsp_gpio.c  bsp_gpio.h  bsp_timer.c  bsp_timer.h  bsp_uart.c  bsp_uart.h  interrupt_handlers.c  qpc_callbacks.c
examples/applications/pid_control/lib/encoder/: CMakeLists.txt  libencoder.c  libencoder.h
examples/applications/pid_control/lib/hd44780/: CMakeLists.txt  hd44780.c  hd44780.h  hd44780_callbacks.c  libhd44780.c  libhd44780.h  libhd44780_ao.c
examples/applications/pid_control/lib/lcd-menu/: lcd-menu.c
examples/applications/pid_control/lib/libprintf/: CMakeLists.txt
examples/applications/pid_control/lib/qp/: CMakeLists.txt
examples/applications/pid_control/qm/lcdmenu/: .lcdmenu  lcdmenu.qm
examples/applications/pid_control/qm/ledblink/: .ledblink  ledblink.qm
examples/applications/pid_control/src/: main.c
examples/applications/pid_control/src/active_objects/: ledblink.c  ledblink.h
examples/dac/basic_dac/: CMakeLists.txt  basic_dac.c  sine_table.h
examples/dac/dac_write/: ledblink.c
examples/dac/dma_dac_wave_player/: CMakeLists.txt  dma_dac.c  music.h
examples/dma/dma_demo/: CMakeLists.txt
examples/dma/dma_mem_to_mem/: CMakeLists.txt  dma_mem_to_mem.c
examples/fatfs/fatfs_ramdisk/: CMakeLists.txt  diskio.h  fatfs_ramdisk.c  ffconf.h
examples/gpio/led_blink/: ledblink.c
examples/gpio/push_button/: CMakeLists.txt
examples/interrupt/external_interrupt/: CMakeLists.txt  external_interrupt.c
examples/led_pwm/: ledpwm.c
examples/platformio/Arduino_and_LL_internal-led-blink/src/: main.cpp
examples/platformio/Arduino_internal-led-blink/src/: main.cpp
examples/platformio/CMSIS_internal-led-blink/: platformio.ini
examples/platformio/CMSIS_internal-led-blink/src/: main.c
examples/platformio/LL_internal-led-blink/: platformio.ini
examples/platformio/LL_internal-led-blink/src/: main.c
examples/platformio/LL_internal-leds-counter/src/: main.c
examples/platformio/LL_internal-push-button/src/: main.c
examples/platformio/LL_uart-demo/: platformio.ini
examples/platformio/LL_uart-demo/src/: main.c
examples/platformio/libopencm3_internal-led-blink/: platformio.ini
examples/platformio/libopencm3_internal-led-blink/src/: main.c
examples/push_button/: pushbutton.c
examples/pwm/led_pwm/: CMakeLists.txt
examples/timer/timer/: CMakeLists.txt  timer_pwm.c
examples/timer/timer_interrupt/: CMakeLists.txt  timer_interrupt.c
examples/uart_print/: CMakeLists.txt  printf-stdarg.c  uart_print.c
presentation/: .gitignore  stm32-presentation.tex
presentation/img/: nucleo-f767zi.avif
presentation/tex/: introduction.tex  ledblink-CMSIS.tex  ledblink-arduino.tex  ledblink-libopencm3.tex  ledblink-stm32cube-ll.tex  stm32-ethernet.tex  stm32-uart.tex  stm32-usb-device.tex  stm32cubemx.tex
sphinx/source/: conf.py  index.rst
sphinx/source/applications/: pid-temperature-control.rst
sphinx/source/core/: stm32-clock.rst
sphinx/source/libraries/: erpc.rst  fatfs.rst  protocol-buffer.rst  telemetry.rst  tinyusb.rst
sphinx/source/motor-control/: direct-torque-control.rst
sphinx/source/peripherals/: stm32-dac.rst  stm32-dma.rst  stm32-i2c.rst  stm32-timer.rst  stm32-uart.rst
submodules/fatfs/: CMakeLists.txt
